--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/Nhanloveyou/firstNode#readme",
   "dependencies": {
+    "bootstrap-icons": "^1.5.0",
     "cookie-parser": "^1.4.5",
     "dompurify": "^2.2.8",
     "ejs": "^2.5.5",
